Fix rpmdb locking issues by loading via separate process
SQLite POSIX locks are bound to PIDs. When accessing rpmdb, both
librpm (used by the fapolicyd daemon) and the fanotify file
descriptors may open the database concurrently. If the fanotify FD
is closed directly, the lock is released even though librpm still
has the DB open, potentially leading to a malformed database state.

A previous workaround attempted to store the FD in a buffer:
https://github.com/linux-application-whitelisting/fapolicyd/commit/23fef4ca19ac49dd73f93362fcb51c05c3f4c580
However, this caused the daemon to read outdated or corrupted versions
of the rpmdb.

This patch expects that workaround is reverted that workaround and introduces a proper fix:

- A new binary, `fapolicyd-rpm-loader`, is introduced.
- This binary is spawned as a separate process when rpmdb needs to be
  reloaded.
- It reads the rpmdb and sends the data back to the daemon via a pipe.
- Because this happens under a separate PID, it avoids conflicts
  with SQLite's PID-bound locks.

This is the only reliable and safe way to reload rpmdb without risking
database corruption or inconsistent reads due to PID-based locking.

Signed-off-by: Radovan Sroka <rsroka@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -72,6 +72,15 @@ libfapolicyd_la_SOURCES += \
 	library/filter.c \
 	library/filter.h
 
+sbin_PROGRAMS += fapolicyd-rpm-loader
+
+fapolicyd_rpm_loader_SOURCES = \
+	handler/fapolicyd-rpm-loader.c
+
+fapolicyd_rpm_loader_CFLAGS = $(fapolicyd_CFLAGS)
+fapolicyd_rpm_loader_LDFLAGS = $(fapolicyd_LDFLAGS)
+
+fapolicyd_rpm_loader_LDADD = libfapolicyd.la
 endif
 
 if WITH_DEB
