Enhance the filter testing suite
Introduced a new data-driven test harness that loads minimal and
production filters, unescapes case file paths, and re-initializes
the filter for each path to ensure deterministic verdicts.

Added explicit checks for missing fixtures, failure on malformed
filters, and a performance guard that parses the production filter
1000 times and compares against a baseline.

Created reusable fixture files defining minimal and production path
verdicts and invalid filter syntax, and integrated them into the
distribution build for packaging.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,17 @@
 
 SUBDIRS = src init doc rules.d
-EXTRA_DIST = ChangeLog AUTHORS NEWS README.md INSTALL fapolicyd.spec dnf/fapolicyd-dnf-plugin.py autogen.sh
+
+TEST_FIXTURES = \
+tests/fixtures/filter-minimal.conf \
+tests/fixtures/filter-cases.txt \
+tests/fixtures/broken-filter.conf \
+init/fapolicyd-filter.conf
+
+EXTRA_DIST = ChangeLog AUTHORS NEWS README.md INSTALL fapolicyd.spec \
+dnf/fapolicyd-dnf-plugin.py autogen.sh \
+$(TEST_FIXTURES)
+
+dist_check_DATA = $(TEST_FIXTURES)
 
 clean-generic:
 	rm -rf autom4te*.cache
