--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -20,7 +20,7 @@
 #
 
 CONFIG_CLEAN_FILES = *.orig *.cur
-check_PROGRAMS = avl_test gid_proc_test filter_test
+check_PROGRAMS = avl_test gid_proc_test
 
 AM_CPPFLAGS = -I${top_srcdir}/src/library/
 
@@ -28,9 +28,12 @@ avl_test_SOURCES = avl_test.c ${top_srcdir}/src/library/avl.c
 gid_proc_test_SOURCES = gid_proc_test.c
 gid_proc_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 
+if WITH_RPM
+check_PROGRAMS += filter_test
 filter_test_SOURCES = filter_test.c
 filter_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 filter_test_CPPFLAGS = -I${top_srcdir}/src/library/ -DTEST_BASE=\"${top_srcdir}\"
+endif
 
 if WITH_DEB
 check_PROGRAMS += deb_test
