Add documentation to filter.conf

--- a/init/fapolicyd-filter.conf
+++ b/init/fapolicyd-filter.conf
@@ -1,4 +1,27 @@
-# default filter file for fedora
+# ---------------------------------------------------------------------------
+# Overview of the default fapolicyd-filter.conf
+#
+# Decision flow
+#   1.  Rules are read top-to-bottom.  Leading “+” means the path is
+#       considered essential and will be added to the trust database;
+#       leading “-” means the path is skipped.
+#   2.  Indentation creates a parent-child relationship.  A child rule
+#       refines the decision of its parent.  Think “allow everything
+#       under /usr/, then deny one sub-tree, then allow one file type
+#       back in”, etc.
+#   3.  If no rule matches at the end of the scan, the parent’s decision
+#       stands; the very last top-level rule is therefore the catch-all.
+#
+# What the shipped rules do
+#   • Start with “+ /”             → everything allowed by default.
+#   • Deny /usr/include/ entirely.                      (- usr/include/)
+#   • Deny /usr/share/ but re-allow developer artefacts:
+#         *.py  *.pl  etc
+#   • Deny /usr/src/kernel*/       except:
+#         */scripts/*   and   */tools/objtool/*
+#
+# For full syntax see:  man 5 fapolicyd-filter.conf
+# ---------------------------------------------------------------------------
 
 + /
  - usr/include/
