Drop a few more files from trust db
Analysis of the trust db shows that there are some non-executables
that are getting in. This patch adds some rules to drop a few file
types so the trust db is smaller.

--- a/init/fapolicyd-filter.conf
+++ b/init/fapolicyd-filter.conf
@@ -19,6 +19,7 @@
 #         *.py  *.pl  etc
 #   • Deny /usr/src/kernel*/       except:
 #         */scripts/*   and   */tools/objtool/*
+#   • Deny html, md, and conf files
 #
 # For full syntax see:  man 5 fapolicyd-filter.conf
 # ---------------------------------------------------------------------------
@@ -60,6 +61,14 @@
   + *.el
   # Compiled Lisp
   + *.elc
+ # Drop kernel source
  - usr/src/kernel*/
+  # Allow scripts and tools
   + */scripts/*
   + */tools/objtool/*
+ # Drop any json
+ - *.json
+ # Drop any markdown
+ - *.md
+ # Drop any configuration
+ - *.conf
