Add a couple more files to drop

--- a/init/fapolicyd-filter.conf
+++ b/init/fapolicyd-filter.conf
@@ -19,7 +19,7 @@
 #         *.py  *.pl  etc
 #   • Deny /usr/src/kernel*/       except:
 #         */scripts/*   and   */tools/objtool/*
-#   • Deny html, md, and conf files
+#   • Deny html, md, conf, and other non-executable files
 #
 # For full syntax see:  man 5 fapolicyd-filter.conf
 # ---------------------------------------------------------------------------
@@ -66,6 +66,10 @@
   # Allow scripts and tools
   + */scripts/*
   + */tools/objtool/*
+ # Drop any xz 
+ - *.xz
+ # Drop any html
+ - *.html
  # Drop any json
  - *.json
  # Drop any markdown
