Missing error handling for unknown types in add_attr_set
Added error handling in add_attr_set so that unknown attribute types
clean up any partial state, leave the caller’s index untouched, and
return an error code.

Introduced a dedicated test that verifies invalid type values are rejected
without altering the provided index and without inserting the faulty set.

Registered the new test in the build system to ensure it runs alongside
existing checks.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -20,7 +20,7 @@
 #
 
 CONFIG_CLEAN_FILES = *.orig *.cur
-check_PROGRAMS = avl_test gid_proc_test escape_test
+check_PROGRAMS = avl_test gid_proc_test escape_test attr_sets_test
 
 AM_CPPFLAGS = -I${top_srcdir}/src/library/
 
@@ -29,6 +29,8 @@ gid_proc_test_SOURCES = gid_proc_test.c
 gid_proc_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 escape_test_SOURCES = escape_test.c
 escape_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
+attr_sets_test_SOURCES = attr_sets_test.c
+attr_sets_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 
 if WITH_RPM
 check_PROGRAMS += filter_test
