Add unit tests for rules module
Introduced a rule parser test harness that outlines its goals and
references a fixture-based workflow for easier extensions.

Centralized negative parse scenarios in a structured array and
added helper routines to load fixtures and walk the rule list
during evaluation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ TEST_FIXTURES = \
 src/tests/fixtures/filter-minimal.conf \
 src/tests/fixtures/filter-cases.txt \
 src/tests/fixtures/broken-filter.conf \
-init/fapolicyd-filter.conf
+init/fapolicyd-filter.conf \
+src/tests/fixtures/rules-valid.rules
 
 EXTRA_DIST = ChangeLog AUTHORS NEWS README.md INSTALL fapolicyd.spec \
 dnf/fapolicyd-dnf-plugin.py autogen.sh \
