--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -44,6 +44,7 @@ endif
 
 if WITH_DEB
 check_PROGRAMS += deb_test
+LIBS += -ldpkg -lmd
 deb_test_CFLAGS = -fPIE -DPIE -pthread -g -W -Wall -Wshadow -Wundef -Wno-unused-result -Wno-unused-parameter -D_GNU_SOURCE -DLIBDPKG_VOLATILE_API
 deb_test_LDFLAGS = -pie -Wl,-z,relro -Wl,-z,now
 deb_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la -ldpkg -lmd
