--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -20,13 +20,15 @@
 #
 
 CONFIG_CLEAN_FILES = *.orig *.cur
-check_PROGRAMS = avl_test gid_proc_test escape_test attr_sets_test rules_test
+check_PROGRAMS = avl_test gid_proc_test uid_proc_test escape_test attr_sets_test rules_test
 
 AM_CPPFLAGS = -I${top_srcdir}/src/library/
 
 avl_test_SOURCES = avl_test.c ${top_srcdir}/src/library/avl.c
 gid_proc_test_SOURCES = gid_proc_test.c
 gid_proc_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
+uid_proc_test_SOURCES = uid_proc_test.c
+uid_proc_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 escape_test_SOURCES = escape_test.c
 escape_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 attr_sets_test_SOURCES = attr_sets_test.c
