--- a/init/fapolicyd.conf
+++ b/init/fapolicyd.conf
@@ -14,6 +14,7 @@ db_max_size = 100
 subj_cache_size = 4099
 obj_cache_size = 8191
 watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660,btrfs
+#ignore_mounts = /path/to/mount1,/path/to/mount2
 trust = rpmdb,file
 integrity = none
 syslog_format = rule,dec,perm,auid,pid,exe,:,path,ftype,trust
