Implement configuration reload on SIGHUP
Added reload_configuration() so SIGHUP re-applies permissive mode, scheduler priority, reporting toggles, integrity policy, syslog format, and RPM SHA requirements before triggering rule and trust reloads.

Introduced set_integrity_mode() in the trust database to safely switch integrity modes during configuration reloads and exported the prototype for the daemon.

Converted the shared permissive flag to an atomic variable and updated all daemon, helper, and test call sites to use atomic loads/stores for thread-safe decisions.

Enabled the daemon and helper binaries to compile with the GNU11 standard so C11 atomics are available during the build.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS = \
 sbin_PROGRAMS = fapolicyd fapolicyd-cli
 lib_LTLIBRARIES= libfapolicyd.la
 
-fapolicyd_CFLAGS = -fPIE -DPIE -pthread -g -W -Wall -Wshadow -Wundef -Wno-unused-result -Wno-unused-parameter -D_GNU_SOURCE
+fapolicyd_CFLAGS = -std=gnu11 -fPIE -DPIE -pthread -g -W -Wall -Wshadow -Wundef -Wno-unused-result -Wno-unused-parameter -D_GNU_SOURCE
 fapolicyd_LDFLAGS = -pie -Wl,-z,relro -Wl,-z,now  -static
 fapolicyd_LDADD = libfapolicyd.la
 
