Add --filter option to fapolicyd-cli --file
Added a --filter flag to fapolicyd-cli file subcommands, parsing it alongside --trust-file and extending help text to advertise the new option.

Applied filter processing to file additions and updates via the new filter_prune_list helper and filter-aware trust file updates so excluded paths are skipped safely.

Updated documentation, bash completions, and test suite to cover the filter-enabled workflow, including a new file_filter_test unit test and build wiring.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -59,6 +59,10 @@ check_PROGRAMS += filter_test
 filter_test_SOURCES = filter_test.c
 filter_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 filter_test_CPPFLAGS = -I${top_srcdir}/src/library/ -DTEST_BASE=\"${top_srcdir}\"
+check_PROGRAMS += file_filter_test
+file_filter_test_SOURCES = file_filter_test.c
+file_filter_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
+file_filter_test_CPPFLAGS = -I${top_srcdir}/src/library/ -DTEST_BASE=\"${top_srcdir}\"
 endif
 
 if WITH_DEB
