Fix hash detection logic for SHA512
Increased the trust database parsing buffer in the CLI to handle full-length SHA-512 digests, preventing algorithm inference failures.

Added a shared TRUSTDB_DATA_BUFSZ constant alongside existing digest size limits for safer buffer sizing.

Introduced a regression test and wired it into the test suite to verify SHA-512 trust entries round-trip correctly through the configured format.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -21,7 +21,8 @@
 
 CONFIG_CLEAN_FILES = *.orig *.cur
 check_PROGRAMS = avl_test gid_proc_test uid_proc_test escape_test \
-attr_sets_test elf_file_test fd_fgets_test rules_test event_test
+attr_sets_test elf_file_test fd_fgets_test rules_test event_test \
+trustdb_format_test
 
 AM_CPPFLAGS = -I${top_srcdir}/src/library/
 AM_CFLAGS = -std=gnu11
@@ -42,6 +43,7 @@ fd_fgets_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 rules_test_SOURCES = rules_test.c
 rules_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 rules_test_CPPFLAGS = -I${top_srcdir}/src/library/ -DTEST_BASE=\"${top_srcdir}\"
+trustdb_format_test_SOURCES = trustdb_format_test.c
 event_test_SOURCES = event_test.c
 event_test_LDADD = \
 	${top_builddir}/src/library/libfapolicyd_la-event.o \
