Drop more needless code from trust db
Adjust /usr/src to drop all. This gets nvidia in addition to the kernel.
Within the scripts directory, there is source code. Drop it.

--- a/init/fapolicyd-filter.conf
+++ b/init/fapolicyd-filter.conf
@@ -63,10 +63,13 @@
   + *.el
   # Compiled Lisp
   + *.elc
- # Drop kernel source
- - usr/src/kernel*/
+ # Drop all source (kernel/nvidia)
+ - usr/src/*
   # Allow scripts and tools
   + */scripts/*
+   # Drop any source code
+   - *.c
+   - *.h
   + */tools/objtool/*
  # Drop any xz 
  - *.xz
