Make the src line a directory match
Retrying again...

Marked the usr/src rule as a directory filter so kernel sources are denied while script/tool exceptions remain scoped properly.

Documented that omitting the trailing slash turns a directory rule into a file glob that leaves the parent decision in effect.

--- a/init/fapolicyd-filter.conf
+++ b/init/fapolicyd-filter.conf
@@ -64,7 +64,7 @@
   # Compiled Lisp
   + *.elc
  # Drop all source (kernel/nvidia)
- - usr/src/*
+ - usr/src/*/
   # Allow scripts and tools
   + */scripts/*
    # Drop any source code
