Allow Lmod bash profiles.d execution
/etc/profile.d/modules.sh executes /usr/share/lmod/lmod/init/bash which
is denied. It is intended to run. Allow it to be trusted so that it can.

--- a/init/fapolicyd-filter.conf
+++ b/init/fapolicyd-filter.conf
@@ -63,6 +63,8 @@
   + *.el
   # Compiled Lisp
   + *.elc
+  # Allow Lmod to run in bash profiles.d/modules.sh
+  + lmod/*/bash
  # Drop all source (kernel/nvidia)
  - usr/src/*/
   # Allow scripts and tools
