Add file type detection unit tests
Exposed the fast file type helper prototypes in the public header so they can be exercised by tests and other modules.

Added a dedicated unit test covering shebang parsing, interpreter MIME mapping, magic-number shortcuts, and text-format detection, including BOM handling and common script scenarios.

Wired the new test binary into the test suite build to ensure it is compiled alongside existing checks.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -21,8 +21,8 @@
 
 CONFIG_CLEAN_FILES = *.orig *.cur
 check_PROGRAMS = avl_test gid_proc_test uid_proc_test escape_test \
-attr_sets_test elf_file_test fd_fgets_test rules_test event_test \
-trustdb_format_test
+attr_sets_test elf_file_test fd_fgets_test file_type_detect_test \
+rules_test event_test trustdb_format_test
 
 AM_CPPFLAGS = -I${top_srcdir}/src/library/
 AM_CFLAGS = -std=gnu11
@@ -40,6 +40,8 @@ elf_file_test_SOURCES = elf_file_test.c
 elf_file_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 fd_fgets_test_SOURCES = fd_fgets_test.c
 fd_fgets_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
+file_type_detect_test_SOURCES = file_type_detect_test.c
+file_type_detect_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 rules_test_SOURCES = rules_test.c
 rules_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la
 rules_test_CPPFLAGS = -I${top_srcdir}/src/library/ -DTEST_BASE=\"${top_srcdir}\"
