Add dependency tracking for libfapolicyd.la
Added a dependency on libfapolicyd.la to the recursive check target so the library is built before descending into test directories during make check.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,8 @@ AM_CPPFLAGS = \
 	-I${top_srcdir} \
 	-I${top_srcdir}/src/library
 
+check-recursive: libfapolicyd.la
+
 sbin_PROGRAMS = fapolicyd fapolicyd-cli
 lib_LTLIBRARIES= libfapolicyd.la
 
