Fix Ubuntu builds

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -81,6 +81,7 @@ deb_test_LDFLAGS = -pie -Wl,-z,relro -Wl,-z,now
 deb_test_LDADD = ${top_builddir}/src/.libs/libfapolicyd.la -ldpkg -lmd
 deb_test_SOURCES = \
   deb_test.c \
+  test-stubs.c \
   ${top_srcdir}/src/library/file.c \
   ${top_srcdir}/src/library/backend-manager.c \
   ${top_srcdir}/src/library/deb-backend.c
